// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generator - app:bootstrap with default config should prepare EntityA 1`] = `
{
  "adminEntity": undefined,
  "annotations": {
    "changelogDate": "20220129025419",
  },
  "anyFieldHasDocumentation": false,
  "anyFieldHasFileBasedContentType": false,
  "anyFieldHasImageContentType": false,
  "anyFieldHasTextContentType": false,
  "anyFieldIsBigDecimal": false,
  "anyFieldIsBlobDerived": false,
  "anyFieldIsDateDerived": false,
  "anyFieldIsDuration": false,
  "anyFieldIsInstant": false,
  "anyFieldIsLocalDate": false,
  "anyFieldIsLocalTime": false,
  "anyFieldIsTimeDerived": false,
  "anyFieldIsUUID": true,
  "anyFieldIsZonedDateTime": false,
  "anyPropertyHasValidation": false,
  "anyRelationshipIsRequired": false,
  "builtInUserManagement": undefined,
  "changelogDate": "20220129025419",
  "changelogDateForRecent": 2022-01-29T02:54:19.000Z,
  "clientFramework": "angular",
  "clientRootFolder": "",
  "containsBagRelationships": false,
  "databaseType": "sql",
  "differentRelationships": {},
  "dto": "mapstruct",
  "dtoAny": true,
  "dtoClass": "EntityADTO",
  "dtoInstance": "entityADTO",
  "dtoMapstruct": true,
  "dtoSuffix": "DTO",
  "eagerRelations": [],
  "embedded": false,
  "entityAbsoluteClass": "com.mycompany.myapp.domain.EntityA",
  "entityAbsoluteFolder": "com/mycompany/myapp/",
  "entityAbsolutePackage": "com.mycompany.myapp",
  "entityAngularJSSuffix": "",
  "entityAngularName": "EntityA",
  "entityAngularNamePlural": "EntityAS",
  "entityApi": "",
  "entityApiDescription": undefined,
  "entityApiUrl": "entity-as",
  "entityAuthority": undefined,
  "entityClass": "EntityA",
  "entityClassPlural": "EntityAS",
  "entityContainsCollectionField": false,
  "entityFileName": "entity-a",
  "entityFolderName": "entity-a",
  "entityI18nVariant": "default",
  "entityInstance": "entityA",
  "entityInstancePlural": "entityAS",
  "entityJavaPackageFolder": "",
  "entityJavadoc": undefined,
  "entityModelFileName": "entity-a",
  "entityNameCapitalized": "EntityA",
  "entityNameHumanized": "Entity A",
  "entityNameKebabCase": "entity-a",
  "entityNamePlural": "EntityAS",
  "entityNamePluralHumanized": "Entity AS",
  "entityNamePluralizedAndSpinalCased": "entity-as",
  "entityPackage": undefined,
  "entityPage": "entity-a",
  "entityPluralFileName": "entity-as",
  "entityReactName": "EntityA",
  "entityReadAuthority": undefined,
  "entityServiceFileName": "entity-a",
  "entityStateName": "entity-a",
  "entitySuffix": "",
  "entityTableName": "entitya",
  "entityTranslationKey": "entityA",
  "entityTranslationKeyMenu": "entityA",
  "entityTranslationKeyMenuPath": "global.menu.entities.entityA",
  "entityTsName": "EntityA",
  "entityUrl": "entity-a",
  "enums": [],
  "existingEnum": false,
  "faker": Any<Object>,
  "fieldNameChoices": [],
  "fields": [
    {
      "autoGenerate": true,
      "autoGenerateByRepository": true,
      "autoGenerateByService": false,
      "blobContentTypeAny": false,
      "blobContentTypeImage": false,
      "blobContentTypeJson": false,
      "blobContentTypeText": false,
      "columnName": "id",
      "entity": Any<Object>,
      "fieldApiDescription": undefined,
      "fieldInJavaBeanMethod": "Id",
      "fieldIsEnum": false,
      "fieldJavaValueGenerator": "UUID.randomUUID()",
      "fieldJavadoc": undefined,
      "fieldName": "id",
      "fieldNameAsDatabaseColumn": "id",
      "fieldNameCapitalized": "Id",
      "fieldNameHumanized": "Id",
      "fieldNameUnderscored": "id",
      "fieldSupportsSortBy": true,
      "fieldTranslationKey": "jhipsterApp.entityA.id",
      "fieldType": "UUID",
      "fieldTypeAnyBlob": false,
      "fieldTypeBigDecimal": false,
      "fieldTypeBinary": false,
      "fieldTypeBlob": false,
      "fieldTypeBoolean": false,
      "fieldTypeByte": false,
      "fieldTypeByteBuffer": false,
      "fieldTypeBytes": false,
      "fieldTypeCharSequence": true,
      "fieldTypeDouble": false,
      "fieldTypeDuration": false,
      "fieldTypeFloat": false,
      "fieldTypeImageBlob": false,
      "fieldTypeInstant": false,
      "fieldTypeInteger": false,
      "fieldTypeLocalDate": false,
      "fieldTypeLocalTime": false,
      "fieldTypeLong": false,
      "fieldTypeNumeric": false,
      "fieldTypeString": false,
      "fieldTypeTemporal": false,
      "fieldTypeTextBlob": false,
      "fieldTypeTimed": false,
      "fieldTypeUUID": true,
      "fieldTypeZonedDateTime": false,
      "fieldValidate": false,
      "fieldValidateRulesPatternJava": undefined,
      "fieldValidationMax": false,
      "fieldValidationMaxBytes": false,
      "fieldValidationMaxLength": false,
      "fieldValidationMaxbytes": false,
      "fieldValidationMaxlength": false,
      "fieldValidationMin": false,
      "fieldValidationMinBytes": false,
      "fieldValidationMinLength": false,
      "fieldValidationMinbytes": false,
      "fieldValidationMinlength": false,
      "fieldValidationPattern": false,
      "fieldValidationRequired": false,
      "fieldValidationUnique": false,
      "fieldWithContentType": false,
      "generateFakeData": Any<Function>,
      "generateFakeDataFromPattern": [Function],
      "htmlInputType": "text",
      "id": true,
      "javaFieldType": "UUID",
      "javaFieldTypeInteger": false,
      "javaFieldTypeLong": false,
      "javaFieldTypeString": false,
      "javaFieldTypeUUID": true,
      "javaValueGenerator": "UUID.randomUUID()",
      "javaValueSample1": "UUID.fromString("23d8dc04-a48b-45d9-a01d-4b728f0ad4aa")",
      "javaValueSample2": "UUID.fromString("ad79f240-3727-46c3-b89f-2cf6ebd74367")",
      "jpaGeneratedValue": true,
      "jpaGeneratedValueIdentity": false,
      "jpaGeneratedValueSequence": false,
      "nullable": true,
      "path": [
        "id",
      ],
      "propertyApiDescription": undefined,
      "propertyConsumerName": "setId",
      "propertyJavaBeanName": "Id",
      "propertyName": "id",
      "propertyNameCapitalized": "Id",
      "propertyNameUpperSnakeCase": "ID",
      "propertySupplierName": "getId",
      "propertyTranslationKey": "jhipsterApp.entityA.id",
      "readonly": true,
      "requiresPersistableImplementation": false,
      "tsType": "string",
      "unique": false,
      "uniqueValue": [
        "189bcd33-1d2c-4426-a20c-948f41d0b0a6",
        "22ccb613-6f9d-4043-9a1b-63de682c25f1",
        "19b8e903-b097-46b3-a65a-778acb6d87e9",
        "6fe41aa2-077f-41d3-b692-28efde354481",
        "6e13b9b6-a70d-4146-9d4c-ef8f187a1a20",
      ],
    },
    {
      "blobContentTypeAny": false,
      "blobContentTypeImage": false,
      "blobContentTypeJson": false,
      "blobContentTypeText": false,
      "columnName": "name",
      "entity": Any<Object>,
      "fieldApiDescription": undefined,
      "fieldInJavaBeanMethod": "Name",
      "fieldIsEnum": false,
      "fieldJavaValueGenerator": "UUID.randomUUID().toString()",
      "fieldJavadoc": undefined,
      "fieldName": "name",
      "fieldNameAsDatabaseColumn": "name",
      "fieldNameCapitalized": "Name",
      "fieldNameHumanized": "Name",
      "fieldNameUnderscored": "name",
      "fieldSupportsSortBy": true,
      "fieldTranslationKey": "jhipsterApp.entityA.name",
      "fieldType": "String",
      "fieldTypeAnyBlob": false,
      "fieldTypeBigDecimal": false,
      "fieldTypeBinary": false,
      "fieldTypeBlob": false,
      "fieldTypeBoolean": false,
      "fieldTypeByte": false,
      "fieldTypeByteBuffer": false,
      "fieldTypeBytes": false,
      "fieldTypeCharSequence": true,
      "fieldTypeDouble": false,
      "fieldTypeDuration": false,
      "fieldTypeFloat": false,
      "fieldTypeImageBlob": false,
      "fieldTypeInstant": false,
      "fieldTypeInteger": false,
      "fieldTypeLocalDate": false,
      "fieldTypeLocalTime": false,
      "fieldTypeLong": false,
      "fieldTypeNumeric": false,
      "fieldTypeString": true,
      "fieldTypeTemporal": false,
      "fieldTypeTextBlob": false,
      "fieldTypeTimed": false,
      "fieldTypeUUID": false,
      "fieldTypeZonedDateTime": false,
      "fieldValidate": false,
      "fieldValidateRulesPatternJava": undefined,
      "fieldValidationMax": false,
      "fieldValidationMaxBytes": false,
      "fieldValidationMaxLength": false,
      "fieldValidationMaxbytes": false,
      "fieldValidationMaxlength": false,
      "fieldValidationMin": false,
      "fieldValidationMinBytes": false,
      "fieldValidationMinLength": false,
      "fieldValidationMinbytes": false,
      "fieldValidationMinlength": false,
      "fieldValidationPattern": false,
      "fieldValidationRequired": false,
      "fieldValidationUnique": false,
      "fieldWithContentType": false,
      "generateFakeData": Any<Function>,
      "generateFakeDataFromPattern": [Function],
      "htmlInputType": "text",
      "javaFieldType": "String",
      "javaFieldTypeInteger": false,
      "javaFieldTypeLong": false,
      "javaFieldTypeString": true,
      "javaFieldTypeUUID": false,
      "javaValueGenerator": "UUID.randomUUID().toString()",
      "javaValueSample1": ""name1"",
      "javaValueSample2": ""name2"",
      "nullable": true,
      "path": [
        "name",
      ],
      "propertyApiDescription": undefined,
      "propertyConsumerName": "setName",
      "propertyJavaBeanName": "Name",
      "propertyName": "name",
      "propertyNameCapitalized": "Name",
      "propertyNameUpperSnakeCase": "NAME",
      "propertySupplierName": "getName",
      "propertyTranslationKey": "jhipsterApp.entityA.name",
      "tsType": "string",
      "unique": false,
      "uniqueValue": [],
    },
    {
      "blobContentTypeAny": false,
      "blobContentTypeImage": false,
      "blobContentTypeJson": false,
      "blobContentTypeText": false,
      "columnName": "details",
      "entity": Any<Object>,
      "fieldApiDescription": undefined,
      "fieldInJavaBeanMethod": "Details",
      "fieldIsEnum": false,
      "fieldJavaValueGenerator": "UUID.randomUUID().toString()",
      "fieldJavadoc": undefined,
      "fieldName": "details",
      "fieldNameAsDatabaseColumn": "details",
      "fieldNameCapitalized": "Details",
      "fieldNameHumanized": "Details",
      "fieldNameUnderscored": "details",
      "fieldSupportsSortBy": false,
      "fieldTranslationKey": "jhipsterApp.entityA.details",
      "fieldType": "String",
      "fieldTypeAnyBlob": false,
      "fieldTypeBigDecimal": false,
      "fieldTypeBinary": false,
      "fieldTypeBlob": false,
      "fieldTypeBoolean": false,
      "fieldTypeByte": false,
      "fieldTypeByteBuffer": false,
      "fieldTypeBytes": false,
      "fieldTypeCharSequence": true,
      "fieldTypeDouble": false,
      "fieldTypeDuration": false,
      "fieldTypeFloat": false,
      "fieldTypeImageBlob": false,
      "fieldTypeInstant": false,
      "fieldTypeInteger": false,
      "fieldTypeLocalDate": false,
      "fieldTypeLocalTime": false,
      "fieldTypeLong": false,
      "fieldTypeNumeric": false,
      "fieldTypeString": true,
      "fieldTypeTemporal": false,
      "fieldTypeTextBlob": false,
      "fieldTypeTimed": false,
      "fieldTypeUUID": false,
      "fieldTypeZonedDateTime": false,
      "fieldValidate": false,
      "fieldValidateRulesPatternJava": undefined,
      "fieldValidationMax": false,
      "fieldValidationMaxBytes": false,
      "fieldValidationMaxLength": false,
      "fieldValidationMaxbytes": false,
      "fieldValidationMaxlength": false,
      "fieldValidationMin": false,
      "fieldValidationMinBytes": false,
      "fieldValidationMinLength": false,
      "fieldValidationMinbytes": false,
      "fieldValidationMinlength": false,
      "fieldValidationPattern": false,
      "fieldValidationRequired": false,
      "fieldValidationUnique": false,
      "fieldWithContentType": false,
      "generateFakeData": Any<Function>,
      "generateFakeDataFromPattern": [Function],
      "htmlInputType": "text",
      "javaFieldType": "String",
      "javaFieldTypeInteger": false,
      "javaFieldTypeLong": false,
      "javaFieldTypeString": true,
      "javaFieldTypeUUID": false,
      "javaValueGenerator": "UUID.randomUUID().toString()",
      "javaValueSample1": ""details1"",
      "javaValueSample2": ""details2"",
      "mapstructExpression": "java(s.getName())",
      "nullable": true,
      "options": {
        "mapstructExpression": "java(s.getName())",
      },
      "path": [
        "details",
      ],
      "propertyApiDescription": undefined,
      "propertyConsumerName": "setDetails",
      "propertyJavaBeanName": "Details",
      "propertyName": "details",
      "propertyNameCapitalized": "Details",
      "propertyNameUpperSnakeCase": "DETAILS",
      "propertySupplierName": "getDetails",
      "propertyTranslationKey": "jhipsterApp.entityA.details",
      "readonly": true,
      "transient": true,
      "tsType": "string",
      "unique": false,
      "uniqueValue": [],
    },
  ],
  "fieldsContainNoOwnerOneToOne": false,
  "fluentMethods": true,
  "generateFakeData": Any<Function>,
  "hasCyclicRequiredRelationship": false,
  "hasRelationshipWithBuiltInUser": false,
  "i18nAlertHeaderPrefix": "jhipsterApp.entityA",
  "i18nKeyPrefix": "jhipsterApp.entityA",
  "implementsEagerLoadApis": false,
  "importApiModelProperty": false,
  "isUsingMapsId": false,
  "jpaMetamodelFiltering": false,
  "mapsIdAssoc": undefined,
  "microfrontend": false,
  "microserviceAppName": "",
  "microserviceName": undefined,
  "name": "EntityA",
  "otherEntities": Any<Array>,
  "otherEntitiesWithPersistableRelationship": [],
  "otherEntityPrimaryKeyTypes": [],
  "otherEntityPrimaryKeyTypesIncludesUUID": false,
  "otherRelationships": [],
  "pagination": "no",
  "paginationInfiniteScroll": false,
  "paginationNo": true,
  "paginationPagination": false,
  "persistClass": "EntityA",
  "persistInstance": "entityA",
  "persistableRelationships": [],
  "primaryKey": {
    "autoGenerate": true,
    "composite": false,
    "derived": false,
    "derivedFields": Any<Array>,
    "fields": Any<Array>,
    "hasInteger": false,
    "hasLong": false,
    "hasUUID": true,
    "hibernateSnakeCaseName": "id",
    "ids": [
      {
        "autoGenerate": true,
        "field": Any<Object>,
        "getter": "getId",
        "name": "id",
        "nameCapitalized": "Id",
        "nameDotted": "id",
        "nameDottedAsserted": "id!",
        "setter": "setId",
      },
    ],
    "javaSampleValues": [
      "UUID.randomUUID()",
      "UUID.randomUUID()",
      "UUID.randomUUID()",
    ],
    "name": "id",
    "nameCapitalized": "Id",
    "ownFields": Any<Array>,
    "propertyConsumerName": "setId",
    "propertySupplierName": "getId",
    "relationships": [],
    "tsSampleValues": [
      "'9fec3727-3421-4967-b213-ba36557ca194'",
      "'1361f429-3817-4123-8ee3-fdf8943310b2'",
    ],
    "tsType": "string",
    "type": "UUID",
    "typeInteger": false,
    "typeLong": false,
    "typeNumeric": false,
    "typeString": false,
    "typeUUID": true,
  },
  "prodDatabaseType": "postgresql",
  "reactive": false,
  "reactiveEagerRelations": Any<Array>,
  "reactiveOtherEntities": Any<Set>,
  "reactiveRegularEagerRelations": Any<Array>,
  "reactiveUniqueEntityTypes": Any<Set>,
  "readOnly": false,
  "regularEagerRelations": Any<Array>,
  "relationships": Any<Array>,
  "relationshipsByOtherEntity": {},
  "relationshipsContainEagerLoad": false,
  "relationshipsContainOtherSideIgnore": false,
  "requiresPersistableImplementation": false,
  "resetFakerSeed": Any<Function>,
  "restClass": "EntityADTO",
  "restInstance": "entityADTO",
  "restProperties": Any<Array>,
  "searchEngine": "no",
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "searchEngineNo": true,
  "service": "no",
  "skipUiGrouping": false,
  "tsKeyType": "string",
  "tsPrimaryKeySamples": [
    "{id: '6fe41aa2-077f-41d3-b692-28efde354481'}",
    "{id: '6e13b9b6-a70d-4146-9d4c-ef8f187a1a20'}",
  ],
  "tsSampleWithFullData": "{
  id: '19b8e903-b097-46b3-a65a-778acb6d87e9',
  name: 'carefully wisely'}",
  "tsSampleWithNewData": "{
  id: null}",
  "tsSampleWithPartialData": "{
  id: '189bcd33-1d2c-4426-a20c-948f41d0b0a6',
  name: 'perp oily queasily'}",
  "tsSampleWithRequiredData": "{
  id: '22ccb613-6f9d-4043-9a1b-63de682c25f1'}",
  "uniqueEnums": [],
  "updatableEntity": true,
  "useMicroserviceJson": false,
}
`;

exports[`generator - app:bootstrap with default config should prepare User 1`] = `
{
  "adminEntity": undefined,
  "adminUserDto": "AdminUserDTO",
  "annotations": {
    "changelogDate": "20220129025420",
  },
  "anyFieldHasDocumentation": false,
  "anyFieldHasFileBasedContentType": false,
  "anyFieldHasImageContentType": false,
  "anyFieldHasTextContentType": false,
  "anyFieldIsBigDecimal": false,
  "anyFieldIsBlobDerived": false,
  "anyFieldIsDateDerived": false,
  "anyFieldIsDuration": false,
  "anyFieldIsInstant": false,
  "anyFieldIsLocalDate": false,
  "anyFieldIsLocalTime": false,
  "anyFieldIsTimeDerived": false,
  "anyFieldIsUUID": false,
  "anyFieldIsZonedDateTime": false,
  "anyPropertyHasValidation": true,
  "anyRelationshipIsRequired": false,
  "auditableEntity": true,
  "builtIn": true,
  "builtInUser": true,
  "builtInUserManagement": undefined,
  "changelogDate": "20220129025420",
  "changelogDateForRecent": 2022-01-29T02:54:20.000Z,
  "clientFramework": "angular",
  "clientRootFolder": "",
  "containsBagRelationships": false,
  "databaseType": "sql",
  "differentRelationships": {},
  "dto": "any",
  "dtoAny": true,
  "dtoClass": "UserDTO",
  "dtoInstance": "userDTO",
  "dtoMapstruct": true,
  "dtoSuffix": "DTO",
  "eagerRelations": [],
  "embedded": false,
  "entityAbsoluteClass": "com.mycompany.myapp.domain.User",
  "entityAbsoluteFolder": "com/mycompany/myapp/",
  "entityAbsolutePackage": "com.mycompany.myapp",
  "entityAngularJSSuffix": "",
  "entityAngularName": "User",
  "entityAngularNamePlural": "Users",
  "entityApi": "",
  "entityApiDescription": undefined,
  "entityApiUrl": "users",
  "entityAuthority": undefined,
  "entityClass": "User",
  "entityClassPlural": "Users",
  "entityContainsCollectionField": false,
  "entityDomainLayer": false,
  "entityFileName": "user",
  "entityFolderName": "user",
  "entityI18nVariant": "default",
  "entityInstance": "user",
  "entityInstancePlural": "users",
  "entityJavaPackageFolder": "",
  "entityJavadoc": undefined,
  "entityModelFileName": "user",
  "entityNameCapitalized": "User",
  "entityNameHumanized": "User",
  "entityNameKebabCase": "user",
  "entityNamePlural": "Users",
  "entityNamePluralHumanized": "Users",
  "entityNamePluralizedAndSpinalCased": "users",
  "entityPackage": undefined,
  "entityPage": "user",
  "entityPersistenceLayer": false,
  "entityPluralFileName": "users",
  "entityReactName": "User",
  "entityReadAuthority": undefined,
  "entityRestLayer": false,
  "entitySearchLayer": false,
  "entityServiceFileName": "user",
  "entityStateName": "user",
  "entitySuffix": "",
  "entityTableName": "jhi_user",
  "entityTranslationKey": "user",
  "entityTranslationKeyMenu": "user",
  "entityTranslationKeyMenuPath": "global.menu.entities.user",
  "entityTsName": "User",
  "entityUrl": "user",
  "enums": [],
  "existingEnum": false,
  "faker": Any<Object>,
  "fieldNameChoices": [],
  "fields": [
    {
      "autoGenerate": true,
      "autoGenerateByRepository": true,
      "autoGenerateByService": false,
      "blobContentTypeAny": false,
      "blobContentTypeImage": false,
      "blobContentTypeJson": false,
      "blobContentTypeText": false,
      "builtIn": true,
      "columnName": "id",
      "entity": Any<Object>,
      "fieldApiDescription": undefined,
      "fieldInJavaBeanMethod": "Id",
      "fieldIsEnum": false,
      "fieldJavaValueGenerator": "longCount.incrementAndGet()",
      "fieldJavadoc": undefined,
      "fieldName": "id",
      "fieldNameAsDatabaseColumn": "id",
      "fieldNameCapitalized": "Id",
      "fieldNameHumanized": "ID",
      "fieldNameUnderscored": "id",
      "fieldSupportsSortBy": true,
      "fieldTranslationKey": "global.field.id",
      "fieldType": "Long",
      "fieldTypeAnyBlob": false,
      "fieldTypeBigDecimal": false,
      "fieldTypeBinary": false,
      "fieldTypeBlob": false,
      "fieldTypeBoolean": false,
      "fieldTypeByte": false,
      "fieldTypeByteBuffer": false,
      "fieldTypeBytes": false,
      "fieldTypeCharSequence": false,
      "fieldTypeDouble": false,
      "fieldTypeDuration": false,
      "fieldTypeFloat": false,
      "fieldTypeImageBlob": false,
      "fieldTypeInstant": false,
      "fieldTypeInteger": false,
      "fieldTypeLocalDate": false,
      "fieldTypeLocalTime": false,
      "fieldTypeLong": true,
      "fieldTypeNumeric": true,
      "fieldTypeString": false,
      "fieldTypeTemporal": false,
      "fieldTypeTextBlob": false,
      "fieldTypeTimed": false,
      "fieldTypeUUID": false,
      "fieldTypeZonedDateTime": false,
      "fieldValidate": false,
      "fieldValidateRulesMaxlength": undefined,
      "fieldValidateRulesPatternJava": undefined,
      "fieldValidationMax": false,
      "fieldValidationMaxBytes": false,
      "fieldValidationMaxLength": false,
      "fieldValidationMaxbytes": false,
      "fieldValidationMaxlength": false,
      "fieldValidationMin": false,
      "fieldValidationMinBytes": false,
      "fieldValidationMinLength": false,
      "fieldValidationMinbytes": false,
      "fieldValidationMinlength": false,
      "fieldValidationPattern": false,
      "fieldValidationRequired": false,
      "fieldValidationUnique": false,
      "fieldWithContentType": false,
      "generateFakeData": Any<Function>,
      "generateFakeDataFromPattern": [Function],
      "htmlInputType": "number",
      "id": true,
      "javaFieldType": "Long",
      "javaFieldTypeInteger": false,
      "javaFieldTypeLong": true,
      "javaFieldTypeString": false,
      "javaFieldTypeUUID": false,
      "javaValueGenerator": "longCount.incrementAndGet()",
      "javaValueSample1": "1L",
      "javaValueSample2": "2L",
      "jpaGeneratedValue": "sequence",
      "jpaGeneratedValueIdentity": false,
      "jpaGeneratedValueSequence": true,
      "jpaSequenceGeneratorName": "sequenceGenerator",
      "liquibaseCustomSequenceGenerator": false,
      "liquibaseSequenceGeneratorName": "sequence_generator",
      "nullable": true,
      "path": [
        "id",
      ],
      "propertyApiDescription": undefined,
      "propertyConsumerName": "setId",
      "propertyJavaBeanName": "Id",
      "propertyName": "id",
      "propertyNameCapitalized": "Id",
      "propertyNameUpperSnakeCase": "ID",
      "propertySupplierName": "getId",
      "propertyTranslationKey": "global.field.id",
      "readonly": true,
      "requiresPersistableImplementation": false,
      "tsType": "number",
      "unique": false,
      "uniqueValue": [
        966,
        24814,
        5440,
        3944,
        6275,
      ],
    },
    {
      "blobContentTypeAny": false,
      "blobContentTypeImage": false,
      "blobContentTypeJson": false,
      "blobContentTypeText": false,
      "builtIn": true,
      "columnName": "login",
      "entity": Any<Object>,
      "fakerTemplate": "{{internet.username}}",
      "fieldApiDescription": undefined,
      "fieldInJavaBeanMethod": "Login",
      "fieldIsEnum": false,
      "fieldJavaValueGenerator": "UUID.randomUUID().toString()",
      "fieldJavadoc": undefined,
      "fieldName": "login",
      "fieldNameAsDatabaseColumn": "login",
      "fieldNameCapitalized": "Login",
      "fieldNameHumanized": "Login",
      "fieldNameUnderscored": "login",
      "fieldSupportsSortBy": true,
      "fieldTranslationKey": "userManagement.login",
      "fieldType": "String",
      "fieldTypeAnyBlob": false,
      "fieldTypeBigDecimal": false,
      "fieldTypeBinary": false,
      "fieldTypeBlob": false,
      "fieldTypeBoolean": false,
      "fieldTypeByte": false,
      "fieldTypeByteBuffer": false,
      "fieldTypeBytes": false,
      "fieldTypeCharSequence": true,
      "fieldTypeDouble": false,
      "fieldTypeDuration": false,
      "fieldTypeFloat": false,
      "fieldTypeImageBlob": false,
      "fieldTypeInstant": false,
      "fieldTypeInteger": false,
      "fieldTypeLocalDate": false,
      "fieldTypeLocalTime": false,
      "fieldTypeLong": false,
      "fieldTypeNumeric": false,
      "fieldTypeString": true,
      "fieldTypeTemporal": false,
      "fieldTypeTextBlob": false,
      "fieldTypeTimed": false,
      "fieldTypeUUID": false,
      "fieldTypeZonedDateTime": false,
      "fieldValidate": true,
      "fieldValidateRules": [
        "required",
        "unique",
        "maxlength",
        "pattern",
      ],
      "fieldValidateRulesMaxlength": 50,
      "fieldValidateRulesPattern": "^[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\.[a-zA-Z0-9-]+)*$|^[_.@A-Za-z0-9-]+$",
      "fieldValidateRulesPatternJava": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
      "fieldValidationMax": false,
      "fieldValidationMaxBytes": false,
      "fieldValidationMaxLength": true,
      "fieldValidationMaxbytes": false,
      "fieldValidationMaxlength": true,
      "fieldValidationMin": false,
      "fieldValidationMinBytes": false,
      "fieldValidationMinLength": false,
      "fieldValidationMinbytes": false,
      "fieldValidationMinlength": false,
      "fieldValidationPattern": true,
      "fieldValidationRequired": true,
      "fieldValidationUnique": true,
      "fieldWithContentType": false,
      "generateFakeData": Any<Function>,
      "generateFakeDataFromPattern": [Function],
      "htmlInputType": "text",
      "javaFieldType": "String",
      "javaFieldTypeInteger": false,
      "javaFieldTypeLong": false,
      "javaFieldTypeString": true,
      "javaFieldTypeUUID": false,
      "javaValueGenerator": "UUID.randomUUID().toString()",
      "javaValueSample1": ""login1"",
      "javaValueSample2": ""login2"",
      "maxlength": 50,
      "nullable": false,
      "path": [
        "login",
      ],
      "propertyApiDescription": undefined,
      "propertyConsumerName": "setLogin",
      "propertyJavaBeanName": "Login",
      "propertyName": "login",
      "propertyNameCapitalized": "Login",
      "propertyNameUpperSnakeCase": "LOGIN",
      "propertySupplierName": "getLogin",
      "propertyTranslationKey": "userManagement.login",
      "tsType": "string",
      "unique": true,
      "uniqueConstraintName": "ux_jhi_user__login",
      "uniqueValue": [
        "Isaac_Senger",
        "Mac36",
        "Ken.Dietrich20",
        "Gabrielle.Rath49",
      ],
    },
    {
      "blobContentTypeAny": false,
      "blobContentTypeImage": false,
      "blobContentTypeJson": false,
      "blobContentTypeText": false,
      "builtIn": true,
      "columnName": "first_name",
      "entity": Any<Object>,
      "fakerTemplate": "{{person.firstName}}",
      "fieldApiDescription": undefined,
      "fieldInJavaBeanMethod": "FirstName",
      "fieldIsEnum": false,
      "fieldJavaValueGenerator": "UUID.randomUUID().toString()",
      "fieldJavadoc": undefined,
      "fieldName": "firstName",
      "fieldNameAsDatabaseColumn": "first_name",
      "fieldNameCapitalized": "FirstName",
      "fieldNameHumanized": "First Name",
      "fieldNameUnderscored": "first_name",
      "fieldSupportsSortBy": true,
      "fieldTranslationKey": "userManagement.firstName",
      "fieldType": "String",
      "fieldTypeAnyBlob": false,
      "fieldTypeBigDecimal": false,
      "fieldTypeBinary": false,
      "fieldTypeBlob": false,
      "fieldTypeBoolean": false,
      "fieldTypeByte": false,
      "fieldTypeByteBuffer": false,
      "fieldTypeBytes": false,
      "fieldTypeCharSequence": true,
      "fieldTypeDouble": false,
      "fieldTypeDuration": false,
      "fieldTypeFloat": false,
      "fieldTypeImageBlob": false,
      "fieldTypeInstant": false,
      "fieldTypeInteger": false,
      "fieldTypeLocalDate": false,
      "fieldTypeLocalTime": false,
      "fieldTypeLong": false,
      "fieldTypeNumeric": false,
      "fieldTypeString": true,
      "fieldTypeTemporal": false,
      "fieldTypeTextBlob": false,
      "fieldTypeTimed": false,
      "fieldTypeUUID": false,
      "fieldTypeZonedDateTime": false,
      "fieldValidate": true,
      "fieldValidateRules": [
        "maxlength",
      ],
      "fieldValidateRulesMaxlength": 50,
      "fieldValidateRulesPatternJava": undefined,
      "fieldValidationMax": false,
      "fieldValidationMaxBytes": false,
      "fieldValidationMaxLength": true,
      "fieldValidationMaxbytes": false,
      "fieldValidationMaxlength": true,
      "fieldValidationMin": false,
      "fieldValidationMinBytes": false,
      "fieldValidationMinLength": false,
      "fieldValidationMinbytes": false,
      "fieldValidationMinlength": false,
      "fieldValidationPattern": false,
      "fieldValidationRequired": false,
      "fieldValidationUnique": false,
      "fieldWithContentType": false,
      "generateFakeData": Any<Function>,
      "generateFakeDataFromPattern": [Function],
      "htmlInputType": "text",
      "javaFieldType": "String",
      "javaFieldTypeInteger": false,
      "javaFieldTypeLong": false,
      "javaFieldTypeString": true,
      "javaFieldTypeUUID": false,
      "javaValueGenerator": "UUID.randomUUID().toString()",
      "javaValueSample1": ""firstName1"",
      "javaValueSample2": ""firstName2"",
      "maxlength": 50,
      "nullable": true,
      "path": [
        "firstName",
      ],
      "propertyApiDescription": undefined,
      "propertyConsumerName": "setFirstName",
      "propertyJavaBeanName": "FirstName",
      "propertyName": "firstName",
      "propertyNameCapitalized": "FirstName",
      "propertyNameUpperSnakeCase": "FIRST_NAME",
      "propertySupplierName": "getFirstName",
      "propertyTranslationKey": "userManagement.firstName",
      "tsType": "string",
      "unique": false,
      "uniqueValue": [],
    },
    {
      "blobContentTypeAny": false,
      "blobContentTypeImage": false,
      "blobContentTypeJson": false,
      "blobContentTypeText": false,
      "builtIn": true,
      "columnName": "last_name",
      "entity": Any<Object>,
      "fakerTemplate": "{{person.lastName}}",
      "fieldApiDescription": undefined,
      "fieldInJavaBeanMethod": "LastName",
      "fieldIsEnum": false,
      "fieldJavaValueGenerator": "UUID.randomUUID().toString()",
      "fieldJavadoc": undefined,
      "fieldName": "lastName",
      "fieldNameAsDatabaseColumn": "last_name",
      "fieldNameCapitalized": "LastName",
      "fieldNameHumanized": "Last Name",
      "fieldNameUnderscored": "last_name",
      "fieldSupportsSortBy": true,
      "fieldTranslationKey": "userManagement.lastName",
      "fieldType": "String",
      "fieldTypeAnyBlob": false,
      "fieldTypeBigDecimal": false,
      "fieldTypeBinary": false,
      "fieldTypeBlob": false,
      "fieldTypeBoolean": false,
      "fieldTypeByte": false,
      "fieldTypeByteBuffer": false,
      "fieldTypeBytes": false,
      "fieldTypeCharSequence": true,
      "fieldTypeDouble": false,
      "fieldTypeDuration": false,
      "fieldTypeFloat": false,
      "fieldTypeImageBlob": false,
      "fieldTypeInstant": false,
      "fieldTypeInteger": false,
      "fieldTypeLocalDate": false,
      "fieldTypeLocalTime": false,
      "fieldTypeLong": false,
      "fieldTypeNumeric": false,
      "fieldTypeString": true,
      "fieldTypeTemporal": false,
      "fieldTypeTextBlob": false,
      "fieldTypeTimed": false,
      "fieldTypeUUID": false,
      "fieldTypeZonedDateTime": false,
      "fieldValidate": true,
      "fieldValidateRules": [
        "maxlength",
      ],
      "fieldValidateRulesMaxlength": 50,
      "fieldValidateRulesPatternJava": undefined,
      "fieldValidationMax": false,
      "fieldValidationMaxBytes": false,
      "fieldValidationMaxLength": true,
      "fieldValidationMaxbytes": false,
      "fieldValidationMaxlength": true,
      "fieldValidationMin": false,
      "fieldValidationMinBytes": false,
      "fieldValidationMinLength": false,
      "fieldValidationMinbytes": false,
      "fieldValidationMinlength": false,
      "fieldValidationPattern": false,
      "fieldValidationRequired": false,
      "fieldValidationUnique": false,
      "fieldWithContentType": false,
      "generateFakeData": Any<Function>,
      "generateFakeDataFromPattern": [Function],
      "htmlInputType": "text",
      "javaFieldType": "String",
      "javaFieldTypeInteger": false,
      "javaFieldTypeLong": false,
      "javaFieldTypeString": true,
      "javaFieldTypeUUID": false,
      "javaValueGenerator": "UUID.randomUUID().toString()",
      "javaValueSample1": ""lastName1"",
      "javaValueSample2": ""lastName2"",
      "maxlength": 50,
      "nullable": true,
      "path": [
        "lastName",
      ],
      "propertyApiDescription": undefined,
      "propertyConsumerName": "setLastName",
      "propertyJavaBeanName": "LastName",
      "propertyName": "lastName",
      "propertyNameCapitalized": "LastName",
      "propertyNameUpperSnakeCase": "LAST_NAME",
      "propertySupplierName": "getLastName",
      "propertyTranslationKey": "userManagement.lastName",
      "tsType": "string",
      "unique": false,
      "uniqueValue": [],
    },
    {
      "blobContentTypeAny": false,
      "blobContentTypeImage": false,
      "blobContentTypeJson": false,
      "blobContentTypeText": false,
      "builtIn": true,
      "columnName": "email",
      "entity": Any<Object>,
      "fakerTemplate": "{{internet.email}}",
      "fieldApiDescription": undefined,
      "fieldInJavaBeanMethod": "Email",
      "fieldIsEnum": false,
      "fieldJavaValueGenerator": "UUID.randomUUID().toString()",
      "fieldJavadoc": undefined,
      "fieldName": "email",
      "fieldNameAsDatabaseColumn": "email",
      "fieldNameCapitalized": "Email",
      "fieldNameHumanized": "Email",
      "fieldNameUnderscored": "email",
      "fieldSupportsSortBy": true,
      "fieldTranslationKey": "userManagement.email",
      "fieldType": "String",
      "fieldTypeAnyBlob": false,
      "fieldTypeBigDecimal": false,
      "fieldTypeBinary": false,
      "fieldTypeBlob": false,
      "fieldTypeBoolean": false,
      "fieldTypeByte": false,
      "fieldTypeByteBuffer": false,
      "fieldTypeBytes": false,
      "fieldTypeCharSequence": true,
      "fieldTypeDouble": false,
      "fieldTypeDuration": false,
      "fieldTypeFloat": false,
      "fieldTypeImageBlob": false,
      "fieldTypeInstant": false,
      "fieldTypeInteger": false,
      "fieldTypeLocalDate": false,
      "fieldTypeLocalTime": false,
      "fieldTypeLong": false,
      "fieldTypeNumeric": false,
      "fieldTypeString": true,
      "fieldTypeTemporal": false,
      "fieldTypeTextBlob": false,
      "fieldTypeTimed": false,
      "fieldTypeUUID": false,
      "fieldTypeZonedDateTime": false,
      "fieldValidate": true,
      "fieldValidateRules": [
        "required",
        "unique",
        "maxlength",
        "minlength",
      ],
      "fieldValidateRulesMaxlength": 191,
      "fieldValidateRulesMinlength": 5,
      "fieldValidateRulesPatternJava": undefined,
      "fieldValidationMax": false,
      "fieldValidationMaxBytes": false,
      "fieldValidationMaxLength": true,
      "fieldValidationMaxbytes": false,
      "fieldValidationMaxlength": true,
      "fieldValidationMin": false,
      "fieldValidationMinBytes": false,
      "fieldValidationMinLength": true,
      "fieldValidationMinbytes": false,
      "fieldValidationMinlength": true,
      "fieldValidationPattern": false,
      "fieldValidationRequired": true,
      "fieldValidationUnique": true,
      "fieldWithContentType": false,
      "generateFakeData": Any<Function>,
      "generateFakeDataFromPattern": [Function],
      "htmlInputType": "text",
      "javaFieldType": "String",
      "javaFieldTypeInteger": false,
      "javaFieldTypeLong": false,
      "javaFieldTypeString": true,
      "javaFieldTypeUUID": false,
      "javaValueGenerator": "UUID.randomUUID().toString()",
      "javaValueSample1": ""email1"",
      "javaValueSample2": ""email2"",
      "maxlength": 191,
      "nullable": false,
      "path": [
        "email",
      ],
      "propertyApiDescription": undefined,
      "propertyConsumerName": "setEmail",
      "propertyJavaBeanName": "Email",
      "propertyName": "email",
      "propertyNameCapitalized": "Email",
      "propertyNameUpperSnakeCase": "EMAIL",
      "propertySupplierName": "getEmail",
      "propertyTranslationKey": "userManagement.email",
      "tsType": "string",
      "unique": true,
      "uniqueConstraintName": "ux_jhi_user__email",
      "uniqueValue": [],
    },
    {
      "blobContentTypeAny": false,
      "blobContentTypeImage": false,
      "blobContentTypeJson": false,
      "blobContentTypeText": false,
      "builtIn": true,
      "columnName": "lang_key",
      "entity": Any<Object>,
      "fieldApiDescription": undefined,
      "fieldInJavaBeanMethod": "LangKey",
      "fieldIsEnum": false,
      "fieldJavaValueGenerator": "UUID.randomUUID().toString()",
      "fieldJavadoc": undefined,
      "fieldName": "langKey",
      "fieldNameAsDatabaseColumn": "lang_key",
      "fieldNameCapitalized": "LangKey",
      "fieldNameHumanized": "Lang Key",
      "fieldNameUnderscored": "lang_key",
      "fieldSupportsSortBy": true,
      "fieldTranslationKey": "userManagement.langKey",
      "fieldType": "String",
      "fieldTypeAnyBlob": false,
      "fieldTypeBigDecimal": false,
      "fieldTypeBinary": false,
      "fieldTypeBlob": false,
      "fieldTypeBoolean": false,
      "fieldTypeByte": false,
      "fieldTypeByteBuffer": false,
      "fieldTypeBytes": false,
      "fieldTypeCharSequence": true,
      "fieldTypeDouble": false,
      "fieldTypeDuration": false,
      "fieldTypeFloat": false,
      "fieldTypeImageBlob": false,
      "fieldTypeInstant": false,
      "fieldTypeInteger": false,
      "fieldTypeLocalDate": false,
      "fieldTypeLocalTime": false,
      "fieldTypeLong": false,
      "fieldTypeNumeric": false,
      "fieldTypeString": true,
      "fieldTypeTemporal": false,
      "fieldTypeTextBlob": false,
      "fieldTypeTimed": false,
      "fieldTypeUUID": false,
      "fieldTypeZonedDateTime": false,
      "fieldValidate": true,
      "fieldValidateRules": [
        "maxlength",
      ],
      "fieldValidateRulesMaxlength": 10,
      "fieldValidateRulesPatternJava": undefined,
      "fieldValidationMax": false,
      "fieldValidationMaxBytes": false,
      "fieldValidationMaxLength": true,
      "fieldValidationMaxbytes": false,
      "fieldValidationMaxlength": true,
      "fieldValidationMin": false,
      "fieldValidationMinBytes": false,
      "fieldValidationMinLength": false,
      "fieldValidationMinbytes": false,
      "fieldValidationMinlength": false,
      "fieldValidationPattern": false,
      "fieldValidationRequired": false,
      "fieldValidationUnique": false,
      "fieldWithContentType": false,
      "generateFakeData": Any<Function>,
      "generateFakeDataFromPattern": [Function],
      "htmlInputType": "text",
      "javaFieldType": "String",
      "javaFieldTypeInteger": false,
      "javaFieldTypeLong": false,
      "javaFieldTypeString": true,
      "javaFieldTypeUUID": false,
      "javaValueGenerator": "UUID.randomUUID().toString()",
      "javaValueSample1": ""langKey1"",
      "javaValueSample2": ""langKey2"",
      "maxlength": 10,
      "nullable": true,
      "path": [
        "langKey",
      ],
      "propertyApiDescription": undefined,
      "propertyConsumerName": "setLangKey",
      "propertyJavaBeanName": "LangKey",
      "propertyName": "langKey",
      "propertyNameCapitalized": "LangKey",
      "propertyNameUpperSnakeCase": "LANG_KEY",
      "propertySupplierName": "getLangKey",
      "propertyTranslationKey": "userManagement.langKey",
      "tsType": "string",
      "unique": false,
      "uniqueValue": [],
    },
    {
      "blobContentTypeAny": false,
      "blobContentTypeImage": false,
      "blobContentTypeJson": false,
      "blobContentTypeText": false,
      "builtIn": true,
      "columnName": "image_url",
      "entity": Any<Object>,
      "fieldApiDescription": undefined,
      "fieldInJavaBeanMethod": "ImageUrl",
      "fieldIsEnum": false,
      "fieldJavaValueGenerator": "UUID.randomUUID().toString()",
      "fieldJavadoc": undefined,
      "fieldName": "imageUrl",
      "fieldNameAsDatabaseColumn": "image_url",
      "fieldNameCapitalized": "ImageUrl",
      "fieldNameHumanized": "Image Url",
      "fieldNameUnderscored": "image_url",
      "fieldSupportsSortBy": true,
      "fieldTranslationKey": "userManagement.imageUrl",
      "fieldType": "String",
      "fieldTypeAnyBlob": false,
      "fieldTypeBigDecimal": false,
      "fieldTypeBinary": false,
      "fieldTypeBlob": false,
      "fieldTypeBoolean": false,
      "fieldTypeByte": false,
      "fieldTypeByteBuffer": false,
      "fieldTypeBytes": false,
      "fieldTypeCharSequence": true,
      "fieldTypeDouble": false,
      "fieldTypeDuration": false,
      "fieldTypeFloat": false,
      "fieldTypeImageBlob": false,
      "fieldTypeInstant": false,
      "fieldTypeInteger": false,
      "fieldTypeLocalDate": false,
      "fieldTypeLocalTime": false,
      "fieldTypeLong": false,
      "fieldTypeNumeric": false,
      "fieldTypeString": true,
      "fieldTypeTemporal": false,
      "fieldTypeTextBlob": false,
      "fieldTypeTimed": false,
      "fieldTypeUUID": false,
      "fieldTypeZonedDateTime": false,
      "fieldValidate": true,
      "fieldValidateRules": [
        "maxlength",
      ],
      "fieldValidateRulesMaxlength": 256,
      "fieldValidateRulesPatternJava": undefined,
      "fieldValidationMax": false,
      "fieldValidationMaxBytes": false,
      "fieldValidationMaxLength": true,
      "fieldValidationMaxbytes": false,
      "fieldValidationMaxlength": true,
      "fieldValidationMin": false,
      "fieldValidationMinBytes": false,
      "fieldValidationMinLength": false,
      "fieldValidationMinbytes": false,
      "fieldValidationMinlength": false,
      "fieldValidationPattern": false,
      "fieldValidationRequired": false,
      "fieldValidationUnique": false,
      "fieldWithContentType": false,
      "generateFakeData": Any<Function>,
      "generateFakeDataFromPattern": [Function],
      "htmlInputType": "text",
      "javaFieldType": "String",
      "javaFieldTypeInteger": false,
      "javaFieldTypeLong": false,
      "javaFieldTypeString": true,
      "javaFieldTypeUUID": false,
      "javaValueGenerator": "UUID.randomUUID().toString()",
      "javaValueSample1": ""imageUrl1"",
      "javaValueSample2": ""imageUrl2"",
      "maxlength": 256,
      "nullable": true,
      "path": [
        "imageUrl",
      ],
      "propertyApiDescription": undefined,
      "propertyConsumerName": "setImageUrl",
      "propertyJavaBeanName": "ImageUrl",
      "propertyName": "imageUrl",
      "propertyNameCapitalized": "ImageUrl",
      "propertyNameUpperSnakeCase": "IMAGE_URL",
      "propertySupplierName": "getImageUrl",
      "propertyTranslationKey": "userManagement.imageUrl",
      "tsType": "string",
      "unique": false,
      "uniqueValue": [],
    },
    {
      "autoGenerate": true,
      "blobContentTypeAny": false,
      "blobContentTypeImage": false,
      "blobContentTypeJson": false,
      "blobContentTypeText": false,
      "builtIn": true,
      "columnName": "activated",
      "defaultValue": true,
      "entity": Any<Object>,
      "fieldApiDescription": undefined,
      "fieldInJavaBeanMethod": "Activated",
      "fieldIsEnum": false,
      "fieldJavaValueGenerator": undefined,
      "fieldJavadoc": undefined,
      "fieldName": "activated",
      "fieldNameAsDatabaseColumn": "activated",
      "fieldNameCapitalized": "Activated",
      "fieldNameHumanized": "Activated",
      "fieldNameUnderscored": "activated",
      "fieldSupportsSortBy": true,
      "fieldTranslationKey": "userManagement.activated",
      "fieldType": "Boolean",
      "fieldTypeAnyBlob": false,
      "fieldTypeBigDecimal": false,
      "fieldTypeBinary": false,
      "fieldTypeBlob": false,
      "fieldTypeBoolean": true,
      "fieldTypeByte": false,
      "fieldTypeByteBuffer": false,
      "fieldTypeBytes": false,
      "fieldTypeCharSequence": false,
      "fieldTypeDouble": false,
      "fieldTypeDuration": false,
      "fieldTypeFloat": false,
      "fieldTypeImageBlob": false,
      "fieldTypeInstant": false,
      "fieldTypeInteger": false,
      "fieldTypeLocalDate": false,
      "fieldTypeLocalTime": false,
      "fieldTypeLong": false,
      "fieldTypeNumeric": false,
      "fieldTypeString": false,
      "fieldTypeTemporal": false,
      "fieldTypeTextBlob": false,
      "fieldTypeTimed": false,
      "fieldTypeUUID": false,
      "fieldTypeZonedDateTime": false,
      "fieldValidate": false,
      "fieldValidateRulesPatternJava": undefined,
      "fieldValidationMax": false,
      "fieldValidationMaxBytes": false,
      "fieldValidationMaxLength": false,
      "fieldValidationMaxbytes": false,
      "fieldValidationMaxlength": false,
      "fieldValidationMin": false,
      "fieldValidationMinBytes": false,
      "fieldValidationMinLength": false,
      "fieldValidationMinbytes": false,
      "fieldValidationMinlength": false,
      "fieldValidationPattern": false,
      "fieldValidationRequired": false,
      "fieldValidationUnique": false,
      "fieldWithContentType": false,
      "generateFakeData": Any<Function>,
      "generateFakeDataFromPattern": [Function],
      "htmlInputType": "checkbox",
      "javaFieldType": "Boolean",
      "javaFieldTypeInteger": false,
      "javaFieldTypeLong": false,
      "javaFieldTypeString": false,
      "javaFieldTypeUUID": false,
      "javaValueGenerator": undefined,
      "javaValueSample1": undefined,
      "javaValueSample2": undefined,
      "nullable": true,
      "path": [
        "activated",
      ],
      "propertyApiDescription": undefined,
      "propertyConsumerName": "setActivated",
      "propertyJavaBeanName": "Activated",
      "propertyName": "activated",
      "propertyNameCapitalized": "Activated",
      "propertyNameUpperSnakeCase": "ACTIVATED",
      "propertySupplierName": "getActivated",
      "propertyTranslationKey": "userManagement.activated",
      "tsType": "boolean",
      "unique": false,
      "uniqueValue": [],
    },
  ],
  "fieldsContainNoOwnerOneToOne": false,
  "fluentMethods": true,
  "generateFakeData": Any<Function>,
  "hasCyclicRequiredRelationship": false,
  "hasImageField": true,
  "hasRelationshipWithBuiltInUser": false,
  "i18nAlertHeaderPrefix": "userManagement",
  "i18nKeyPrefix": "userManagement",
  "implementsEagerLoadApis": false,
  "importApiModelProperty": false,
  "isUsingMapsId": false,
  "jpaMetamodelFiltering": false,
  "mapsIdAssoc": undefined,
  "microfrontend": false,
  "microserviceAppName": "",
  "microserviceName": undefined,
  "name": "User",
  "otherEntities": Any<Array>,
  "otherEntitiesWithPersistableRelationship": [],
  "otherEntityPrimaryKeyTypes": [],
  "otherEntityPrimaryKeyTypesIncludesUUID": false,
  "otherRelationships": [],
  "pagination": "pagination",
  "paginationInfiniteScroll": false,
  "paginationNo": false,
  "paginationPagination": true,
  "persistClass": "User",
  "persistInstance": "user",
  "persistableRelationships": [],
  "primaryKey": {
    "autoGenerate": true,
    "composite": false,
    "derived": false,
    "derivedFields": Any<Array>,
    "fields": Any<Array>,
    "hasInteger": false,
    "hasLong": true,
    "hasUUID": false,
    "hibernateSnakeCaseName": "id",
    "ids": [
      {
        "autoGenerate": true,
        "field": Any<Object>,
        "getter": "getId",
        "name": "id",
        "nameCapitalized": "Id",
        "nameDotted": "id",
        "nameDottedAsserted": "id!",
        "setter": "setId",
      },
    ],
    "javaSampleValues": [
      "1L",
      "2L",
      "90L",
    ],
    "name": "id",
    "nameCapitalized": "Id",
    "ownFields": Any<Array>,
    "propertyConsumerName": "setId",
    "propertySupplierName": "getId",
    "relationships": [],
    "tsSampleValues": [
      123,
      456,
    ],
    "tsType": "number",
    "type": "Long",
    "typeInteger": false,
    "typeLong": true,
    "typeNumeric": true,
    "typeString": false,
    "typeUUID": false,
  },
  "prodDatabaseType": "postgresql",
  "reactive": false,
  "reactiveEagerRelations": Any<Array>,
  "reactiveOtherEntities": Any<Set>,
  "reactiveRegularEagerRelations": Any<Array>,
  "reactiveUniqueEntityTypes": Any<Set>,
  "readOnly": false,
  "regularEagerRelations": Any<Array>,
  "relationships": Any<Array>,
  "relationshipsByOtherEntity": {},
  "relationshipsContainEagerLoad": false,
  "relationshipsContainOtherSideIgnore": false,
  "requiresPersistableImplementation": false,
  "resetFakerSeed": Any<Function>,
  "restClass": "UserDTO",
  "restInstance": "userDTO",
  "restProperties": Any<Array>,
  "searchEngine": "no",
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "searchEngineNo": true,
  "service": "no",
  "skipClient": false,
  "skipDbChangelog": true,
  "skipUiGrouping": false,
  "tsKeyType": "number",
  "tsPrimaryKeySamples": [
    "{id: 3944}",
    "{id: 6275}",
  ],
  "tsSampleWithFullData": "{
  id: 5440,
  login: 'Ken.Dietrich20'}",
  "tsSampleWithNewData": "{
  login: 'Gabrielle.Rath49',
  id: null}",
  "tsSampleWithPartialData": "{
  id: 966,
  login: 'Isaac_Senger'}",
  "tsSampleWithRequiredData": "{
  id: 24814,
  login: 'Mac36'}",
  "uniqueEnums": [],
  "updatableEntity": true,
  "useMicroserviceJson": false,
}
`;

exports[`generator - app:bootstrap with skipUserManagement should prepare EntityA 1`] = `
{
  "adminEntity": undefined,
  "angularJSSuffix": "js-suffix",
  "annotations": {
    "angularJSSuffix": "js-suffix",
    "changelogDate": "20220129025419",
  },
  "anyFieldHasDocumentation": false,
  "anyFieldHasFileBasedContentType": false,
  "anyFieldHasImageContentType": false,
  "anyFieldHasTextContentType": false,
  "anyFieldIsBigDecimal": false,
  "anyFieldIsBlobDerived": false,
  "anyFieldIsDateDerived": false,
  "anyFieldIsDuration": false,
  "anyFieldIsInstant": false,
  "anyFieldIsLocalDate": false,
  "anyFieldIsLocalTime": false,
  "anyFieldIsTimeDerived": false,
  "anyFieldIsUUID": true,
  "anyFieldIsZonedDateTime": false,
  "anyPropertyHasValidation": false,
  "anyRelationshipIsRequired": false,
  "builtInUserManagement": undefined,
  "changelogDate": "20220129025419",
  "changelogDateForRecent": 2022-01-29T02:54:19.000Z,
  "clientFramework": "angular",
  "clientRootFolder": "",
  "containsBagRelationships": false,
  "databaseType": "sql",
  "differentRelationships": {},
  "dto": "no",
  "dtoAny": false,
  "dtoClass": "EntityADTO",
  "dtoInstance": "entityADTO",
  "dtoMapstruct": false,
  "dtoSuffix": "DTO",
  "eagerRelations": [],
  "embedded": false,
  "entityAbsoluteClass": "com.mycompany.myapp.domain.EntityA",
  "entityAbsoluteFolder": "com/mycompany/myapp/",
  "entityAbsolutePackage": "com.mycompany.myapp",
  "entityAngularJSSuffix": "-js-suffix",
  "entityAngularName": "EntityAJsSuffix",
  "entityAngularNamePlural": "EntityAJsSuffixes",
  "entityApi": "",
  "entityApiDescription": undefined,
  "entityApiUrl": "entity-as",
  "entityAuthority": undefined,
  "entityClass": "EntityA",
  "entityClassPlural": "EntityAS",
  "entityContainsCollectionField": false,
  "entityFileName": "entity-a-js-suffix",
  "entityFolderName": "entity-a-js-suffix",
  "entityI18nVariant": "default",
  "entityInstance": "entityA",
  "entityInstancePlural": "entityAS",
  "entityJavaPackageFolder": "",
  "entityJavadoc": undefined,
  "entityModelFileName": "entity-a-js-suffix",
  "entityNameCapitalized": "EntityA",
  "entityNameHumanized": "Entity A",
  "entityNameKebabCase": "entity-a",
  "entityNamePlural": "EntityAS",
  "entityNamePluralHumanized": "Entity AS",
  "entityNamePluralizedAndSpinalCased": "entity-as",
  "entityPackage": undefined,
  "entityPage": "entity-a-js-suffix",
  "entityPluralFileName": "entity-as-js-suffix",
  "entityReactName": "EntityAJsSuffix",
  "entityReadAuthority": undefined,
  "entityServiceFileName": "entity-a-js-suffix",
  "entityStateName": "entity-a-js-suffix",
  "entitySuffix": "",
  "entityTableName": "entitya",
  "entityTranslationKey": "entityA",
  "entityTranslationKeyMenu": "entityA",
  "entityTranslationKeyMenuPath": "global.menu.entities.entityA",
  "entityTsName": "EntityAJsSuffix",
  "entityUrl": "entity-a-js-suffix",
  "enums": [],
  "existingEnum": false,
  "faker": Any<Object>,
  "fieldNameChoices": [],
  "fields": [
    {
      "autoGenerate": true,
      "autoGenerateByRepository": true,
      "autoGenerateByService": false,
      "blobContentTypeAny": false,
      "blobContentTypeImage": false,
      "blobContentTypeJson": false,
      "blobContentTypeText": false,
      "columnName": "id",
      "entity": Any<Object>,
      "fieldApiDescription": undefined,
      "fieldInJavaBeanMethod": "Id",
      "fieldIsEnum": false,
      "fieldJavaValueGenerator": "UUID.randomUUID()",
      "fieldJavadoc": undefined,
      "fieldName": "id",
      "fieldNameAsDatabaseColumn": "id",
      "fieldNameCapitalized": "Id",
      "fieldNameHumanized": "Id",
      "fieldNameUnderscored": "id",
      "fieldSupportsSortBy": true,
      "fieldTranslationKey": "jhipsterApp.entityA.id",
      "fieldType": "UUID",
      "fieldTypeAnyBlob": false,
      "fieldTypeBigDecimal": false,
      "fieldTypeBinary": false,
      "fieldTypeBlob": false,
      "fieldTypeBoolean": false,
      "fieldTypeByte": false,
      "fieldTypeByteBuffer": false,
      "fieldTypeBytes": false,
      "fieldTypeCharSequence": true,
      "fieldTypeDouble": false,
      "fieldTypeDuration": false,
      "fieldTypeFloat": false,
      "fieldTypeImageBlob": false,
      "fieldTypeInstant": false,
      "fieldTypeInteger": false,
      "fieldTypeLocalDate": false,
      "fieldTypeLocalTime": false,
      "fieldTypeLong": false,
      "fieldTypeNumeric": false,
      "fieldTypeString": false,
      "fieldTypeTemporal": false,
      "fieldTypeTextBlob": false,
      "fieldTypeTimed": false,
      "fieldTypeUUID": true,
      "fieldTypeZonedDateTime": false,
      "fieldValidate": false,
      "fieldValidateRulesPatternJava": undefined,
      "fieldValidationMax": false,
      "fieldValidationMaxBytes": false,
      "fieldValidationMaxLength": false,
      "fieldValidationMaxbytes": false,
      "fieldValidationMaxlength": false,
      "fieldValidationMin": false,
      "fieldValidationMinBytes": false,
      "fieldValidationMinLength": false,
      "fieldValidationMinbytes": false,
      "fieldValidationMinlength": false,
      "fieldValidationPattern": false,
      "fieldValidationRequired": false,
      "fieldValidationUnique": false,
      "fieldWithContentType": false,
      "generateFakeData": Any<Function>,
      "generateFakeDataFromPattern": [Function],
      "htmlInputType": "text",
      "id": true,
      "javaFieldType": "UUID",
      "javaFieldTypeInteger": false,
      "javaFieldTypeLong": false,
      "javaFieldTypeString": false,
      "javaFieldTypeUUID": true,
      "javaValueGenerator": "UUID.randomUUID()",
      "javaValueSample1": "UUID.fromString("23d8dc04-a48b-45d9-a01d-4b728f0ad4aa")",
      "javaValueSample2": "UUID.fromString("ad79f240-3727-46c3-b89f-2cf6ebd74367")",
      "jpaGeneratedValue": true,
      "jpaGeneratedValueIdentity": false,
      "jpaGeneratedValueSequence": false,
      "nullable": true,
      "path": [
        "id",
      ],
      "propertyApiDescription": undefined,
      "propertyConsumerName": "setId",
      "propertyJavaBeanName": "Id",
      "propertyName": "id",
      "propertyNameCapitalized": "Id",
      "propertyNameUpperSnakeCase": "ID",
      "propertySupplierName": "getId",
      "propertyTranslationKey": "jhipsterApp.entityA.id",
      "readonly": true,
      "requiresPersistableImplementation": false,
      "tsType": "string",
      "unique": false,
      "uniqueValue": [
        "2189bcd3-31d2-4c42-9620-c948f41d0b0a",
        "22ccb613-6f9d-4043-9a1b-63de682c25f1",
        "19b8e903-b097-46b3-a65a-778acb6d87e9",
        "6fe41aa2-077f-41d3-b692-28efde354481",
        "6e13b9b6-a70d-4146-9d4c-ef8f187a1a20",
      ],
    },
  ],
  "fieldsContainNoOwnerOneToOne": false,
  "fluentMethods": true,
  "generateFakeData": Any<Function>,
  "hasCyclicRequiredRelationship": false,
  "hasRelationshipWithBuiltInUser": false,
  "i18nAlertHeaderPrefix": "jhipsterApp.entityA",
  "i18nKeyPrefix": "jhipsterApp.entityA",
  "implementsEagerLoadApis": false,
  "importApiModelProperty": false,
  "isUsingMapsId": false,
  "jpaMetamodelFiltering": false,
  "mapsIdAssoc": undefined,
  "microfrontend": false,
  "microserviceAppName": "",
  "microserviceName": undefined,
  "name": "EntityA",
  "otherEntities": Any<Array>,
  "otherEntitiesWithPersistableRelationship": [],
  "otherEntityPrimaryKeyTypes": [],
  "otherEntityPrimaryKeyTypesIncludesUUID": false,
  "otherRelationships": [],
  "pagination": "no",
  "paginationInfiniteScroll": false,
  "paginationNo": true,
  "paginationPagination": false,
  "persistClass": "EntityA",
  "persistInstance": "entityA",
  "persistableRelationships": [],
  "primaryKey": {
    "autoGenerate": true,
    "composite": false,
    "derived": false,
    "derivedFields": Any<Array>,
    "fields": Any<Array>,
    "hasInteger": false,
    "hasLong": false,
    "hasUUID": true,
    "hibernateSnakeCaseName": "id",
    "ids": [
      {
        "autoGenerate": true,
        "field": Any<Object>,
        "getter": "getId",
        "name": "id",
        "nameCapitalized": "Id",
        "nameDotted": "id",
        "nameDottedAsserted": "id!",
        "setter": "setId",
      },
    ],
    "javaSampleValues": [
      "UUID.randomUUID()",
      "UUID.randomUUID()",
      "UUID.randomUUID()",
    ],
    "name": "id",
    "nameCapitalized": "Id",
    "ownFields": Any<Array>,
    "propertyConsumerName": "setId",
    "propertySupplierName": "getId",
    "relationships": [],
    "tsSampleValues": [
      "'9fec3727-3421-4967-b213-ba36557ca194'",
      "'1361f429-3817-4123-8ee3-fdf8943310b2'",
    ],
    "tsType": "string",
    "type": "UUID",
    "typeInteger": false,
    "typeLong": false,
    "typeNumeric": false,
    "typeString": false,
    "typeUUID": true,
  },
  "prodDatabaseType": "postgresql",
  "reactive": false,
  "reactiveEagerRelations": Any<Array>,
  "reactiveOtherEntities": Any<Set>,
  "reactiveRegularEagerRelations": Any<Array>,
  "reactiveUniqueEntityTypes": Any<Set>,
  "readOnly": false,
  "regularEagerRelations": Any<Array>,
  "relationships": Any<Array>,
  "relationshipsByOtherEntity": {},
  "relationshipsContainEagerLoad": false,
  "relationshipsContainOtherSideIgnore": false,
  "requiresPersistableImplementation": false,
  "resetFakerSeed": Any<Function>,
  "restClass": "EntityA",
  "restInstance": "entityA",
  "restProperties": Any<Array>,
  "searchEngine": "no",
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "searchEngineNo": true,
  "service": "no",
  "skipUiGrouping": false,
  "tsKeyType": "string",
  "tsPrimaryKeySamples": [
    "{id: '6fe41aa2-077f-41d3-b692-28efde354481'}",
    "{id: '6e13b9b6-a70d-4146-9d4c-ef8f187a1a20'}",
  ],
  "tsSampleWithFullData": "{
  id: '19b8e903-b097-46b3-a65a-778acb6d87e9'}",
  "tsSampleWithNewData": "{
  id: null}",
  "tsSampleWithPartialData": "{
  id: '2189bcd3-31d2-4c42-9620-c948f41d0b0a'}",
  "tsSampleWithRequiredData": "{
  id: '22ccb613-6f9d-4043-9a1b-63de682c25f1'}",
  "uniqueEnums": [],
  "updatableEntity": false,
  "useMicroserviceJson": false,
}
`;
